Refine lifecycle state machine events